# Neuromorphic-Lab-TUM

./: .gitignore  README.md
Assignment_1_parameter_sweep/: config.py  example.py  example_Assignment_1.ipynb
Assignment_1_parameter_sweep/spinnaker2_neurofem/: .gitignore  README.md
Assignment_1_parameter_sweep/spinnaker2_neurofem/src/: example.ipynb  example.py  neurofem.ipynb  requirements.txt
Assignment_1_parameter_sweep/spinnaker2_neurofem/src/neurofem/: __init__.py  calc.py  config.py  simulation.py
Assignment_1_parameter_sweep/spinnaker2_neurofem/src/neurofem/problems/: __init__.py  poisson.py  utils.py
Assignment_2_FEM_1/: README.txt  jupyter_notebook.ipynb
Assignment_2_FEM_1/data/matrix/: A.mtx
Assignment_2_FEM_1/data/mesh/: elements.csv  mesh.vtk
Assignment_2_FEM_1/data/solution/: solution.csv  solution.vtk
Assignment_2_FEM_1/scripts/: clean_src.sh  compile_fortran.sh
Assignment_2_FEM_1/src/: main.f90  mod_assemble.f90  mod_io.f90  mod_mesh.f90  mod_rhs.f90  mod_solver.f90
Assignment_2_FEM_2/: jupiter_notebook.ipynb
Assignment_2_FEM_2/data/matrix/: A.mtx
Assignment_2_FEM_2/data/mesh/: elements.csv  nodes.csv
Assignment_2_FEM_2/data/solution/: solution.csv
Assignment_2_FEM_2/scripts/: compile_fortran.sh
Assignment_2_FEM_2/src/: main.f90  mod_assemble.f90  mod_compute_error.f90  mod_io.f90  mod_mesh.f90  mod_rhs.f90  mod_solver.f90  mod_types.f90
GPUSolver/: CMakeLists.txt  Convergence.sh  plot_results.py  solve_csr_scipy.py
GPUSolver/data/: SharpRing.vtk  Sphere_00.vtk
GPUSolver/data/matrix/: Sphere_00_mtx.txt  Sphere_00_rhs.txt
GPUSolver/data/mesh/: Sphere_00_solution_output.vtu
GPUSolver/data/solution/: Sphere_00_sol.txt
GPUSolver/include/: ComputeModel.hpp  IO.hpp  geometry.hpp  model.hpp
GPUSolver/src/: ComputeModel.cpp  IO.cpp  main.cpp
